# homeassistant-kubernetes

./: .flake8  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  hacs.json  mkdocs.yaml  pyproject.toml  renovate.json  requirements.txt  update_docu_links.py  zensical.toml
.devcontainer/: automations.yaml  configuration.yaml  devcontainer.json  scenes.yaml  scripts.yaml  setup.sh
.github/workflows/: claude-code-review.yml  claude.yml  frontend.yaml  hacs.yaml  hassfest.yaml  mkdocs.yaml  pyproject.yaml  release.yaml  stale-issues.yaml  tests.yaml  validate.yaml
custom_components/kubernetes/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device.py  diagnostics.py  event.py  kubernetes  kubernetes_client.py  manifest.json  metrics_parser.py  sensor.py  services.py  services.yaml  switch.py  system_health.py  websocket_api.py
custom_components/kubernetes/frontend/: kubernetes-panel.js
custom_components/kubernetes/translations/: en.json  translations.py
docs/: CONFIGURATION.md  CRONJOBS.md  DEVELOPMENT.md  ENTITIES.md  ENTITY_MANAGEMENT.md  EXAMPLES.md  LOGGING.md  RBAC.md  SERVICES.md  SETUP.md  TROUBLESHOOTING.md  index.md
examples/: configuration.yaml
frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: kubernetes-panel.ts
frontend/src/types/: homeassistant.ts
frontend/src/utils/: load-ha-elements.ts
frontend/src/views/: k8s-network.ts  k8s-nodes-table.ts  k8s-overview.ts  k8s-pods-table.ts  k8s-settings.ts  k8s-workloads.ts
manifests/: clusterrole.yaml  clusterrolebinding.yaml  create-serviceaccount-secret.yaml  k3s-serviceaccount.yaml  kubernetes-rbac.yaml  serviceaccount-token-secret.yaml
manifests/full/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
manifests/minimal/: clusterrole.yaml
scripts/: setup_dev_environment.sh
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_device.py  test_diagnostics.py  test_event.py  test_in_cluster_auth.py  test_init.py  test_kubernetes_client.py  test_kubernetes_integration.py  test_repairs.py  test_sensors.py  test_services.py  test_switch.py  test_switch_platform.py  test_system_health.py  test_websocket_api.py
tests/unit/: test_kubernetes_client.py  test_metrics_parser.py
