[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-kubernetes"
version = "0.7.1"
description = "Home Assistant integration for Kubernetes monitoring"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Timo Hankamer", email = "huts-belay7o@icloud.com"}
]
keywords = ["homeassistant", "kubernetes", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]

dependencies = [
    "kubernetes>=33.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.0.0",

    # Linting and formatting
    "ruff==0.15.1",

    # Type checking
    "mypy==1.17.1",

    # Security
    "bandit[toml]==1.7.10",

    # Development tools
    "pre-commit==4.0.1",

    # Documentation
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.44",

    # Home Assistant
    "homeassistant==2026.2.2",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components"]
known-third-party = ["homeassistant", "kubernetes", "aiohttp"]
combine-as-imports = true
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_unreachable = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_no_return = false
# Home Assistant integration specific settings
ignore_missing_imports = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
    "kubernetes.*",
    "homeassistant.*",
    "voluptuous.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "--cov=custom_components.kubernetes",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=50",
]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["custom_components/kubernetes"]
omit = [
    "tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\(Protocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert and shell usage in tests

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py"]
